--- a/odoo/custom/src/private/thaiev_report/report/purchase_order_templates.xml
+++ b/odoo/custom/src/private/thaiev_report/report/purchase_order_templates.xml
@@ -174,9 +174,20 @@
 
             <div class="row" style="margin: 150px 50px 20px;">
                 <div class="col-6 text-center">
+                    <p t-field="o.create_uid" />
                     <strong>Create By</strong>
                 </div>
                 <div class="col-6 text-center">
+                    <t t-if="o.validated">
+                        <p t-field="o.reviewer_ids[-1]" />
+                    </t>
+                    <t t-if="not o.validated">
+                        <p
+                            ><![CDATA[
+                            &nbsp;
+                            ]]>
+                        </p>
+                    </t>
                     <strong>Approver</strong>
                 </div>
             </div>
