--- a/odoo/custom/src/private/thaiev_report/report/purchase_order_templates.xml
+++ b/odoo/custom/src/private/thaiev_report/report/purchase_order_templates.xml
@@ -179,11 +179,11 @@
                 </div>
                 <div class="col-6 text-center">
                     <t t-if="o.validated">
-                        <p t-field="o.reviewer_ids[-1]" />
+                        <p t-esc="o.review_ids[-1].done_by.name" />
                     </t>
                     <t t-if="not o.validated">
-                        <p
-                            ><![CDATA[
+                        <p>
+                            <![CDATA[
                             &nbsp;
                             ]]>
                         </p>
