--- a/odoo/custom/src/private/thaiev_report/report/purchase_order_templates.xml
+++ b/odoo/custom/src/private/thaiev_report/report/purchase_order_templates.xml
@@ -1,62 +1,104 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 <template id="report_purchaseorder_document">
-    <t t-call="web.external_layout">
-        <t t-set="o" t-value="o.with_context(lang=o.partner_id.lang)" />
-        <t t-set="address">
-            <div
-                    t-field="o.partner_id"
-                    t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True, "phone_icons": True}'
-                />
-            <p style="margin: 0">Tax ID: <span t-field="o.partner_id.vat" /></p>
-            <p>Tax Branch: <span t-field="o.partner_id.branch" /></p>
-        </t>
-        <t t-if="o.dest_address_id">
-            <t t-set="information_block">
-                <strong>Shipping address:</strong>
-                <div t-if="o.dest_address_id">
-                    <div
-                            t-field="o.dest_address_id"
-                            t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'
-                            name="purchase_shipping_address"
+    <div class="page">
+
+        <!-- Header -->
+        <div class="header purchase-order">
+
+            <div class="row">
+                <div class="col-3 mb4">
+                    <img
+                            t-if="doc.company_id.logo"
+                            t-att-src="image_data_uri(doc.company_id.logo)"
+                            style="max-height: 45px;"
+                            alt="Logo"
                         />
                 </div>
+                <div
+                        class="col-9 text-right"
+                        style="margin-top:22px;"
+                        t-field="doc.company_id.report_header"
+                        name="moto"
+                    />
+            </div>
+            <div
+                    t-if="doc.company_id.logo or doc.company_id.report_header"
+                    class="row zero_min_height"
+                >
+                <div class="col-12">
+                    <div style="border-bottom: 1px solid black;" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6" name="doc.company_address">
+                    <div
+                            t-field="doc.company_id.partner_id"
+                            t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'
+                        />
+                    <p style="margin: 0">Tax ID: <span
+                                t-field="doc.company_id.partner_id.vat"
+                            /></p>
+                    <p>Tax Branch: <span
+                                t-field="doc.company_id.partner_id.branch"
+                            /></p>
+                </div>
+            </div>
 
-            </t>
-        </t>
-        <div class="page">
+        </div>
+
+        <!-- Article -->
+        <div class="article purchase-oder">
+            <div class="row">
+                <div class="col-8" />
+                <div class="col-4">
+                    <div t-field="doc.partner_id.name" />
+                    <div t-field="doc.partner_id.street" />
+                    <div t-field="doc.partner_id.street2" />
+                    <div>
+                        <span t-field="doc.partner_id.city" />
+                        <span t-field="doc.partner_id.state_id.name" />
+                        <span t-field="doc.partner_id.zip" />
+                    </div>
+                    <p style="margin: 0">Tax ID: <span
+                                t-field="doc.partner_id.vat"
+                            /></p>
+                    <p>Tax Branch: <span t-field="doc.partner_id.branch" /></p>
+                </div>
+            </div>
+
             <div class="oe_structure" />
 
-            <h2 t-if="o.state == 'draft'">Request for Quotation #<span
-                        t-field="o.name"
+            <h2 t-if="doc.state == 'draft'">Request for Quotation #<span
+                        t-field="doc.name"
                     /></h2>
-            <h2 t-if="o.state in ['sent', 'to approve']">Purchase Order #<span
-                        t-field="o.name"
+            <h2 t-if="doc.state in ['sent', 'to approve']">Purchase Order #<span
+                        t-field="doc.name"
                     /></h2>
-            <h2 t-if="o.state in ['purchase', 'done']">Purchase Order #<span
-                        t-field="o.name"
+            <h2 t-if="doc.state in ['purchase', 'done']">Purchase Order #<span
+                        t-field="doc.name"
                     /></h2>
-            <h2 t-if="o.state == 'cancel'">Cancelled Purchase Order #<span
-                        t-field="o.name"
+            <h2 t-if="doc.state == 'cancel'">Cancelled Purchase Order #<span
+                        t-field="doc.name"
                     /></h2>
 
             <div id="informations" class="row mt32 mb32">
-                <div t-if="o.user_id" class="col-3 bm-2">
+                <div t-if="doc.user_id" class="col-3 bm-2">
                     <strong>Purchase Representative:</strong>
-                    <p t-field="o.user_id" class="m-0" />
+                    <p t-field="doc.user_id" class="m-0" />
                 </div>
-                <div t-if="o.partner_ref" class="col-3 bm-2">
+                <div t-if="doc.partner_ref" class="col-3 bm-2">
                     <strong>Your Order Reference:</strong>
-                    <p t-field="o.partner_ref" class="m-0" />
+                    <p t-field="doc.partner_ref" class="m-0" />
                 </div>
-                <div t-if="o.date_order" class="col-3 bm-2">
+                <div t-if="doc.date_order" class="col-3 bm-2">
                     <strong>Order Date:</strong>
-                    <p t-field="o.date_order" class="m-0" />
+                    <p t-field="doc.date_order" class="m-0" />
                 </div>
             </div>
 
             <table class="table table-sm o_main_table">
-                <thead>
+                <thead style="border-top:solid">
                     <tr>
                         <th name="th_description"><strong>Description</strong></th>
                         <th name="th_quantity" class="text-right"><strong
@@ -67,9 +109,9 @@
                                 >Amount</strong></th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody style="border-bottom:solid">
                     <t t-set="current_subtotal" t-value="0" />
-                    <t t-foreach="o.order_line" t-as="line">
+                    <t t-foreach="doc.order_line" t-as="line">
                         <t
                                 t-set="current_subtotal"
                                 t-value="current_subtotal + line.price_subtotal"
@@ -101,7 +143,7 @@
                                 <td class="text-right">
                                     <span
                                             t-field="line.price_subtotal"
-                                            t-options='{"widget": "monetary", "display_currency": o.currency_id}'
+                                            t-options='{"widget": "monetary", "display_currency": doc.currency_id}'
                                         />
                                 </td>
                             </t>
@@ -119,14 +161,14 @@
                             </t>
                         </tr>
                         <t
-                                t-if="current_section and (line_last or o.order_line[line_index+1].display_type == 'line_section')"
+                                t-if="current_section and (line_last or doc.order_line[line_index+1].display_type == 'line_section')"
                             >
                             <tr class="is-subtotal text-right">
                                 <td colspan="99" id="subtotal">
                                     <strong class="mr16">Subtotal</strong>
                                     <span
                                             t-esc="current_subtotal"
-                                            t-options='{"widget": "monetary", "display_currency": o.currency_id}'
+                                            t-options='{"widget": "monetary", "display_currency": doc.currency_id}'
                                         />
                                 </td>
                             </tr>
@@ -138,12 +180,12 @@
             <div id="total" class="row justify-content-end">
                 <div class="col-4">
                     <table class="table table-sm">
-                        <tr class="border-black">
+                        <tr style="border:0">
                             <td name="td_subtotal_label"><strong>Subtotal</strong></td>
                             <td class="text-right">
                                 <span
-                                        t-field="o.amount_untaxed"
-                                        t-options='{"widget": "monetary", "display_currency": o.currency_id}'
+                                        t-field="doc.amount_untaxed"
+                                        t-options='{"widget": "monetary", "display_currency": doc.currency_id}'
                                     />
                             </td>
                         </tr>
@@ -151,17 +193,17 @@
                             <td name="td_taxes_label">Taxes</td>
                             <td class="text-right">
                                 <span
-                                        t-field="o.amount_tax"
-                                        t-options='{"widget": "monetary", "display_currency": o.currency_id}'
+                                        t-field="doc.amount_tax"
+                                        t-options='{"widget": "monetary", "display_currency": doc.currency_id}'
                                     />
                             </td>
                         </tr>
-                        <tr class="border-black o_total">
+                        <tr style="border-bottom:solid">
                             <td name="td_amount_total_label"><strong>Total</strong></td>
                             <td class="text-right">
                                 <span
-                                        t-field="o.amount_total"
-                                        t-options='{"widget": "monetary", "display_currency": o.currency_id}'
+                                        t-field="doc.amount_total"
+                                        t-options='{"widget": "monetary", "display_currency": doc.currency_id}'
                                     />
                             </td>
                         </tr>
@@ -169,19 +211,19 @@
                 </div>
             </div>
 
-            <p t-field="o.notes" />
+            <p t-field="doc.notes" />
             <div class="oe_structure" />
 
             <div class="row" style="margin: 150px 50px 20px;">
                 <div class="col-6 text-center">
-                    <p t-field="o.create_uid" />
+                    <p t-field="doc.create_uid" />
                     <strong>Create By</strong>
                 </div>
                 <div class="col-6 text-center">
-                    <t t-if="o.validated">
-                        <p t-esc="o.review_ids[-1].done_by.name" />
+                    <t t-if="doc.validated">
+                        <p t-esc="doc.review_ids[-1].done_by.name" />
                     </t>
-                    <t t-if="not o.validated">
+                    <t t-if="not doc.validated">
                         <p>
                             <![CDATA[
                             &nbsp;
@@ -194,15 +236,21 @@
 
         </div>
 
-    </t>
+        <!-- footer -->
+        <div class="footer text-center" style="border-top: 1px solid black;">
+            <div t-if="report_type == 'pdf'" class="text-muted">
+                Page: <span class="page" /> / <span class="topage" />
+            </div>
+        </div>
+    </div>
 </template>
 
 <template id="report_purchaseorder">
     <t t-call="web.html_container">
-        <t t-foreach="docs" t-as="o">
+        <t t-foreach="docs" t-as="doc">
             <t
                     t-call="thaiev_report.report_purchaseorder_document"
-                    t-lang="o.partner_id.lang"
+                    t-lang="doc.partner_id.lang"
                 />
         </t>
     </t>
