--- a/odoo/custom/src/private/thaiev_report/report/purchase_order_templates.xml
+++ b/odoo/custom/src/private/thaiev_report/report/purchase_order_templates.xml
@@ -7,11 +7,15 @@
         <div class="header purchase-order">
 
             <div class="row">
-                <div class="col-3 mb4">
+
+            </div>
+
+            <div class="row">
+                <div class="col-8">
                     <img
                             t-if="doc.company_id.logo"
                             t-att-src="image_data_uri(doc.company_id.logo)"
-                            style="max-height: 45px;"
+                            style="max-height: 120px;"
                             alt="Logo"
                         />
                 </div>
@@ -21,27 +25,19 @@
                         t-field="doc.company_id.report_header"
                         name="moto"
                     />
-            </div>
-            <div
-                    t-if="doc.company_id.logo or doc.company_id.report_header"
-                    class="row zero_min_height"
-                >
-                <div class="col-12">
-                    <div style="border-bottom: 1px solid black;" />
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-6" name="doc.company_address">
-                    <div
-                            t-field="doc.company_id.partner_id"
-                            t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'
-                        />
+                <div class="col-4 text-right">
+                    <div t-field="doc.company_id.name" />
+                    <div t-field="doc.company_id.street" />
+                    <div t-field="doc.company_id.street2" />
+                    <div>
+                        <span t-field="doc.company_id.city" />
+                        <span t-field="doc.company_id.state_id.name" />
+                        <span t-field="doc.partner_id.zip" />
+                    </div>
                     <p style="margin: 0">Tax ID: <span
-                                t-field="doc.company_id.partner_id.vat"
+                                t-field="doc.company_id.vat"
                             /></p>
-                    <p>Tax Branch: <span
-                                t-field="doc.company_id.partner_id.branch"
-                            /></p>
+                    <p>Tax Branch: <span t-field="doc.company_id.branch" /></p>
                 </div>
             </div>
 
