--- a/odoo/custom/src/private/thaiev_report/report/report_invoice_template.xml
+++ b/odoo/custom/src/private/thaiev_report/report/report_invoice_template.xml
@@ -1,17 +1,66 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <template id="report_invoice_document">
-        <t t-call="web.external_layout">
-            <t t-set="o" t-value="o.with_context(lang=lang)" />
-            <t t-set="address">
-                <div
-                    t-field="o.partner_id"
-                    t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'
-                />
-                <p style="margin: 0">Tax ID: <span t-field="o.partner_id.vat" /></p>
-                <p>Tax Branch: <span t-field="o.partner_id.branch" /></p>
-            </t>
-            <div class="page">
+        <div class="page">
+
+            <!-- header -->
+            <div class="header invoice-report">
+
+                <div class="row">
+
+                </div>
+
+                <div class="row">
+                    <div class="col-8">
+                        <img
+                            t-if="o.company_id.logo"
+                            t-att-src="image_data_uri(o.company_id.logo)"
+                            style="max-height: 120px;"
+                            alt="Logo"
+                        />
+                    </div>
+                    <div
+                        class="col-9 text-right"
+                        style="margin-top:22px;"
+                        t-field="o.company_id.report_header"
+                        name="moto"
+                    />
+                    <div class="col-4 text-right">
+                        <div t-field="o.company_id.name" />
+                        <div t-field="o.company_id.street" />
+                        <div t-field="o.company_id.street2" />
+                        <div>
+                            <span t-field="o.company_id.city" />
+                            <span t-field="o.company_id.state_id.name" />
+                            <span t-field="o.partner_id.zip" />
+                        </div>
+                        <p style="margin: 0">Tax ID: <span
+                                t-field="o.company_id.vat"
+                            /></p>
+                        <p>Tax Branch: <span t-field="o.company_id.branch" /></p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Article -->
+            <div class="article invoice-report">
+                <div class="row">
+                    <div class="col-8" />
+                    <div class="col-4">
+                        <div t-field="o.partner_id.name" />
+                        <div t-field="o.partner_id.street" />
+                        <div t-field="o.partner_id.street2" />
+                        <div>
+                            <span t-field="o.partner_id.city" />
+                            <span t-field="o.partner_id.state_id.name" />
+                            <span t-field="o.partner_id.zip" />
+                        </div>
+                        <p style="margin: 0">Tax ID: <span
+                                t-field="o.partner_id.vat"
+                            /></p>
+                        <p>Tax Branch: <span t-field="o.partner_id.branch" /></p>
+                    </div>
+                </div>
                 <h2>
                     <span
                         t-if="o.move_type == 'out_invoice' and o.state == 'posted' and print_delivery"
@@ -353,14 +402,15 @@
                         t-field="o.invoice_incoterm_id.code"
                     /> - <span t-field="o.invoice_incoterm_id.name" />
                 </p>
-                <!-- <div id="qrcode" t-if="o.display_qr_code and o.amount_residual > 0">
-                    <p t-if="qr_code_urls.get(o.id)">
-                        <strong class="text-center">Scan me with your banking app.</strong><br/><br/>
-                        <img class="border border-dark rounded" t-att-src="qr_code_urls[o.id]"/>
-                    </p>
-                </div> -->
             </div>
-        </t>
+
+            <!-- footer -->
+            <div class="footer text-center" style="border-top: 1px solid black;">
+                <div t-if="report_type == 'pdf'" class="text-muted">
+                    Page: <span class="page" /> / <span class="topage" />
+                </div>
+            </div>
+        </div>
     </template>
 
     <template id="report_invoice_delivery">
