--- a/odoo/custom/src/private/thaiev_report/report/sale_report_templates.xml
+++ b/odoo/custom/src/private/thaiev_report/report/sale_report_templates.xml
@@ -1,106 +1,68 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-    <!-- Custom header and footer in external_layout -->
-    <template
-        id="external_layout_standard_inherit"
-        inherit_id="web.external_layout_standard"
-    >
-        <!-- Custom header here-->
-        <xpath expr="//div[contains(@t-attf-class,'header')]" position="replace">
-            <div
-                t-attf-class="header o_company_#{company.id}_layout"
-                t-att-style="report_header_style"
-            >
+    <template id="report_saleorder_document">
+        <div class="page">
+
+            <!-- Header -->
+            <div class="header purchase-order">
+
                 <div class="row">
-                    <div class="col-3 mb4">
+
+                </div>
+
+                <div class="row">
+                    <div class="col-8">
                         <img
-                            t-if="company.logo"
-                            t-att-src="image_data_uri(company.logo)"
-                            style="max-height: 45px;"
+                            t-if="doc.company_id.logo"
+                            t-att-src="image_data_uri(doc.company_id.logo)"
+                            style="max-height: 120px;"
                             alt="Logo"
                         />
                     </div>
                     <div
                         class="col-9 text-right"
                         style="margin-top:22px;"
-                        t-field="company.report_header"
+                        t-field="doc.company_id.report_header"
                         name="moto"
                     />
-                </div>
-                <div
-                    t-if="company.logo or company.report_header"
-                    class="row zero_min_height"
-                >
-                    <div class="col-12">
-                        <div style="border-bottom: 1px solid black;" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-6" name="company_address">
-                        <div
-                            t-field="company.partner_id"
-                            t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'
-                        />
+                    <div class="col-4 text-right">
+                        <div t-field="doc.company_id.name" />
+                        <div t-field="doc.company_id.street" />
+                        <div t-field="doc.company_id.street2" />
+                        <div>
+                            <span t-field="doc.company_id.city" />
+                            <span t-field="doc.company_id.state_id.name" />
+                            <span t-field="doc.partner_id.zip" />
+                        </div>
                         <p style="margin: 0">Tax ID: <span
-                                t-field="company.partner_id.vat"
+                                t-field="doc.company_id.vat"
                             /></p>
-                        <p>Tax Branch: <span t-field="company.partner_id.branch" /></p>
+                        <p>Tax Branch: <span t-field="doc.company_id.branch" /></p>
                     </div>
                 </div>
-            </div>
-        </xpath>
 
-        <!-- Custom Footer Here -->
-        <xpath expr="//div/div[hasclass('text-center')]" position="replace">
-            <div class="text-center" style="border-top: 1px solid black;">
-                <div name="financial_infos">
-                    <span t-field="company.report_footer" />
-                </div>
-                <div t-if="report_type == 'pdf'" class="text-muted">
-                    Page: <span class="page" /> / <span class="topage" />
-                </div>
             </div>
-        </xpath>
-    </template>
 
-    <template id="report_saleorder_document">
-        <t t-call="web.external_layout">
-            <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)" />
-            <t t-set="address">
-                <div
-                    t-field="doc.partner_id"
-                    t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'
-                />
-                <p style="margin: 0">Tax ID: <span t-field="doc.partner_id.vat" /></p>
-                <p>Tax Branch: <span t-field="doc.partner_id.branch" /></p>
-            </t>
-            <t
-                t-if="doc.partner_shipping_id == doc.partner_invoice_id
-                                and doc.partner_invoice_id != doc.partner_id
-                                or doc.partner_shipping_id != doc.partner_invoice_id"
-            >
-                <t t-set="information_block">
-                    <strong
-                        t-if="doc.partner_shipping_id == doc.partner_invoice_id"
-                    >Invoicing and Shipping Address:</strong>
-                    <strong
-                        t-if="doc.partner_shipping_id != doc.partner_invoice_id"
-                    >Invoicing Address:</strong>
-                    <div
-                        t-field="doc.partner_invoice_id"
-                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'
-                    />
-                    <t t-if="doc.partner_shipping_id != doc.partner_invoice_id">
-                        <strong>Shipping Address:</strong>
-                        <div
-                            t-field="doc.partner_shipping_id"
-                            t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'
-                        />
-                    </t>
-                </t>
-            </t>
-            <div class="page">
+            <!-- Article -->
+            <div class="article purchase-oder">
+                <div class="row">
+                    <div class="col-8" />
+                    <div class="col-4">
+                        <div t-field="doc.partner_id.name" />
+                        <div t-field="doc.partner_id.street" />
+                        <div t-field="doc.partner_id.street2" />
+                        <div>
+                            <span t-field="doc.partner_id.city" />
+                            <span t-field="doc.partner_id.state_id.name" />
+                            <span t-field="doc.partner_id.zip" />
+                        </div>
+                        <p style="margin: 0">Tax ID: <span
+                                t-field="doc.partner_id.vat"
+                            /></p>
+                        <p>Tax Branch: <span t-field="doc.partner_id.branch" /></p>
+                    </div>
+                </div>
                 <div class="oe_structure" />
 
                 <h2 class="mt16">
@@ -391,7 +353,13 @@
                     <span t-field="doc.fiscal_position_id.sudo().note" />
                 </p>
             </div>
-        </t>
+            <!-- footer -->
+            <div class="footer text-center" style="border-top: 1px solid black;">
+                <div t-if="report_type == 'pdf'" class="text-muted">
+                    Page: <span class="page" /> / <span class="topage" />
+                </div>
+            </div>
+        </div>
     </template>
 
     <template id="report_saleorder">
