--- a/odoo/custom/src/private/thaiev_report/report/report_payment_receipt_templates.xml
+++ b/odoo/custom/src/private/thaiev_report/report/report_payment_receipt_templates.xml
@@ -32,7 +32,7 @@
                         <div>
                             <span t-field="o.company_id.city" />
                             <span t-field="o.company_id.state_id.name" />
-                            <span t-field="o.partner_id.zip" />
+                            <span t-field="doc.company_id.zip" />
                         </div>
                         <p style="margin: 0">Tax ID: <span
                                 t-field="o.company_id.vat"
