include draft pv

--- a/odoo/custom/src/private/thaiev_account_payment_tier_validation/views/account_payment_view.xml
+++ b/odoo/custom/src/private/thaiev_account_payment_tier_validation/views/account_payment_view.xml
@@ -16,7 +16,7 @@
                     <filter
                         name="to_approve"
                         string="To Approve"
-                        domain="[('validated','=',False), ('rejected','=',False), ('state','=','posted')]"
+                        domain="[('validated','=',False), ('rejected','=',False), ('state','!=','cancel')]"
                     />
                     <filter
                         name="rejected"
