--- a/odoo/custom/src/private/thaiev_account_payment_tier_validation/views/account_payment_view.xml
+++ b/odoo/custom/src/private/thaiev_account_payment_tier_validation/views/account_payment_view.xml
@@ -6,22 +6,11 @@
             <field name="model">account.payment</field>
             <field name="inherit_id" ref="account.view_account_payment_search" />
             <field name="arch" type="xml">
-                <filter name="state_posted" position="after">
-                    <separator />
-                    <filter
-                        name="validated"
-                        string="Validated"
-                        domain="[('validated','=',True)]"
-                    />
+                <filter name="validated" position="after">
                     <filter
                         name="to_approve"
                         string="To Approve"
                         domain="[('validated','=',False), ('rejected','=',False), ('state','!=','cancel')]"
-                    />
-                    <filter
-                        name="rejected"
-                        string="Rejected"
-                        domain="[('rejected','=',True)]"
                     />
                 </filter>
             </field>
