--- a/odoo/custom/src/private/thaiev_account_payment_tier_validation/views/account_payment_view.xml
+++ b/odoo/custom/src/private/thaiev_account_payment_tier_validation/views/account_payment_view.xml
@@ -10,7 +10,7 @@
                     <filter
                         name="to_approve"
                         string="To Approve"
-                        domain="[('validated','=',False), ('rejected','=',False), ('state','!=','cancel')]"
+                        domain="[('review_ids','!=',False),('state','!=','cancel'),('validated','=',False)]"
                     />
                 </filter>
             </field>
