--- a/odoo/custom/src/private/thaiev_report/report/report_invoice_template.xml
+++ b/odoo/custom/src/private/thaiev_report/report/report_invoice_template.xml
@@ -92,13 +92,32 @@
                         name="invoice_date"
                     >
                         <t t-if="o.move_type == 'out_invoice'"><strong
-                            >Invoice Date:</strong></t>
+                            >Date:</strong></t>
                         <t t-elif="o.move_type == 'out_refund'"><strong
                             >Credit Note Date:</strong></t>
                         <t t-elif="o.move_type == 'out_receipt'"><strong
                             >Receipt Date:</strong></t>
                         <t t-else=""><strong>Date:</strong></t>
-                        <p class="m-0" t-field="o.invoice_date" />
+                        <t t-if="print_with_payments">
+                            <p class="m-0" t-field="o.invoice_date" />
+                        </t>
+                        <t t-if="print_receipt and o.payment_state == 'paid'">
+                            <t
+                                t-set="payments_vals"
+                                t-value="o.sudo()._get_reconciled_info_JSON_values()"
+                            />
+                            <t t-foreach="payments_vals" t-as="payment_vals">
+                                <p>
+                                    <t
+                                        t-esc="payment_vals['date']"
+                                        t-options='{"widget": "date"}'
+                                    />
+                                </p>
+                            </t>
+                        </t>
+                        <t t-elif="print_receipt and o.payment_state != 'paid'">
+                            <p class="m-0" t-field="o.invoice_date" />
+                        </t>
                     </div>
                     <div
                         class="col-auto col-3 mw-100 mb-2"
