--- a/odoo/custom/src/private/thaiev_report/report/sale_report_templates.xml
+++ b/odoo/custom/src/private/thaiev_report/report/sale_report_templates.xml
@@ -252,14 +252,15 @@
                                         <t
                                             t-if="amount_by_group[5] == 1 and doc.amount_untaxed == amount_by_group[2]"
                                         >
-                                            <td name="td_amount_by_group_label_3">
+                                            <!-- <td name="td_amount_by_group_label_3">
                                                 <span t-esc="amount_by_group[0]" />
                                                 <span>&amp;nbsp;<span
                                                     >on</span>&amp;nbsp;<t
                                                         t-esc="amount_by_group[2]"
                                                         t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'
                                                     /></span>
-                                            </td>
+                                            </td> -->
+                                            <td>VAT 7%</td>
                                             <td
                                                 name="td_amount_by_group_3"
                                                 class="text-right o_price_total"
@@ -271,9 +272,10 @@
                                             </td>
                                         </t>
                                         <t t-else="">
-                                            <td name="td_amount_by_group_label">
+                                            <!-- <td name="td_amount_by_group_label">
                                                 <span t-esc="amount_by_group[0]" />
-                                            </td>
+                                            </td> -->
+                                            <td>VAT 7%</td>
                                             <td
                                                 name="td_amount_by_group"
                                                 class="text-right o_price_total"
