--- a/odoo/custom/src/private/thaiev_report/report/report_invoice_template.xml
+++ b/odoo/custom/src/private/thaiev_report/report/report_invoice_template.xml
@@ -169,6 +169,13 @@
                                 name="th_priceunit"
                                 t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}"
                             ><span>Unit Price</span></th>
+                            <th
+                                name="th_price_unit"
+                                t-if="display_discount"
+                                t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}"
+                            >
+                                <span>Disc.%</span>
+                            </th>
                             <th name="th_subtotal" class="text-right">
                                 <span
                                     groups="account.group_show_line_subtotals_tax_excluded"
@@ -222,6 +229,15 @@
                                         <span
                                             class="text-nowrap"
                                             t-field="line.price_unit"
+                                        />
+                                    </td>
+                                    <td
+                                        t-if="display_discount"
+                                        t-attf-class="text-right {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}"
+                                    >
+                                        <span
+                                            class="text-nowrap"
+                                            t-field="line.discount"
                                         />
                                     </td>
                                     <td class="text-right o_price_total">
