--- a/odoo/custom/src/private/thaiev_report/report/report_invoice_template.xml
+++ b/odoo/custom/src/private/thaiev_report/report/report_invoice_template.xml
@@ -80,7 +80,8 @@
                     <span t-if="o.move_type == 'out_refund'">Credit Note</span>
                     <span t-if="o.move_type == 'in_refund'">Vendor Credit Note</span>
                     <span t-if="o.move_type == 'in_invoice'">Vendor Bill</span>
-                    <span t-if="o.name != '/'" t-field="o.name" />
+                    <span t-if="o.name != '/' and not print_receipt" t-field="o.name" />
+                    <span t-if="print_receipt" t-field="o.payment_info_name" />
                     <t t-if="i == 0">(ORIGINAL)</t>
                     <t t-else="">(COPY)</t>
                 </h2>
